Progress being made

--- a/Gnomoria/settings.ini
+++ b/Gnomoria/settings.ini
@@ -23,8 +23,8 @@ Debug = False
 [Display]
 Width = 1920
 Height = 1080
-FullScreenMode = 1
-VerticalSync = False
+FullScreenMode = 2
+VerticalSync = True
 
 [Audio]
 MusicVolume = 0
@@ -38,7 +38,7 @@ RotateObject = R
 ShortWalls = F
 HiddenCells = E
 ShowAxles = Q
-ShowDarkness = None
+ShowDarkness = OemQuestion
 PanCameraUp = W
 PanCameraLeft = A
 PanCameraDown = S
