--- a/BaseBuilder/Assembly-CSharp.csproj
+++ b/BaseBuilder/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
      <Compile Include="Assets\Script\PathFinding\Path_Node.cs" />
      <Compile Include="Assets\Script\PathFinding\Path_TileGraph.cs" />
      <Compile Include="Assets\Script\UI\UIFurnitureType.cs" />
+     <Compile Include="Assets\Script\UI\UIRoomDetails.cs" />
      <Compile Include="Assets\Script\UI\UIRoomIndex.cs" />
      <Compile Include="Assets\Script\UI\UITileText.cs" />
      <Compile Include="Assets\Script\Utilies\AutoVertSize.cs" />
